2012-01-16:
 * pridan Videoportal.sk
2011-12-26:
 * pridana moznost "Vynuceny stream server" do nastaveni doplnku, snad by mohla vyresit problem se nefunkcnosti HQ na slovensku u nekterych ISP
2011-11-13:
 * oprava zobrazeni "bezejmennych" videi
2011-11-02:
 * debug
2011-11-01:
 * pridan pořad Farmar hlada zenu 2
2011-09-12:
 * pridan pořad CS ma talent
2011-07-22:
 * prechod na upravenou knihovnu BeautifulSOAP - udajne ma zpracovavat dotazy o 100% rychleji, thanx to IVO ;-)  
2011-07-04:
 * zmena fanart(u)
2011-06-21:
 * Oprava prehravani poradu Sefka
2011-06-19:
 * JOJ.sk (alpha) - first release
