@@ -1,3 +1,5 @@
+2012-02-12:
+ * pridan porad Riskni milion
 2012-01-16:
  * pridan Videoportal.sk
 2011-12-26:
